# django-2-Kamila3361

./: pyproject.toml
mysite/: settings.py  urls.py
news/: admin.py  forms.py  models.py  serializer.py  tests.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_alter_news_created_at_comment.py
news/templates/news/: add_news.html  all_news.html  base.html  detail.html
news/templates/registration/: login.html  sign-up.html
